# ncbf-music-manager

./: .gitignore  Cargo.toml  README.md  components.json  package.json  tmp-home.html
.cursor/: mcp.json
.cursor/skills/package-manager/: SKILL.md
.cursor/skills/ui-framework/: SKILL.md
app/: globals.css  layout.tsx  package.json  page.tsx
app/app/: layout.tsx
app/app/(app)/: layout.tsx
app/app/login/: page.tsx
app/components/: app-shell.tsx  asset-list.tsx  bulk-upload-dialog.tsx  create-group-dialog.tsx  create-set-dialog.tsx  create-song-dialog.tsx  delete-song-button.tsx  edit-set-dialog.tsx  edit-song-dialog.tsx  song-assets-dialog.tsx  song-catalog-actions.tsx  song-slide-arrangements.tsx  upload-asset-form.tsx
app/components/ui/: accordion.tsx  button-variants.ts  select.tsx
app/groups/[slug]/: page.tsx
app/lib/: database.types.ts  utils.ts
app/lib/actions/: groups.ts  songs.ts
app/lib/extractors/: pdf.ts  rtf.ts  txt.ts
app/lib/supabase/: middleware.ts  server.ts
app/scripts/: import-text-songs.ts
app/sets/: columns.tsx  data-table.tsx  page.tsx
app/sets/_components/: columns.tsx  data-table.tsx
app/songs/: columns.tsx  data-table.tsx  page.tsx
app/songs/_components/: columns.tsx  data-table.tsx  songs-catalog-table.tsx
components/: add-song-to-set.tsx  app-logo.tsx  asset-list.tsx  bulk-upload-dialog.tsx  create-group-dialog.tsx  create-set-dialog-client.tsx  create-set-dialog.tsx  create-song-dialog.tsx  delete-set-button.tsx  delete-set-dialog-content.tsx  delete-song-button.tsx  delete-song-dialog-content.tsx  edit-set-dialog-content.tsx  edit-set-dialog.tsx  edit-song-dialog-content.tsx  edit-song-dialog.tsx  format-toggle-card.tsx  lyrics-preview.tsx  radio-card-group.tsx  rename-group-popover.tsx  set-charts-export-dialog.tsx  set-lyrics-export-dialog.tsx  set-song-list-client.tsx  set-song-list.tsx  single-file-uploader.tsx  slide-view-toggle.tsx  song-charts-export-dialog.tsx  song-charts-manager.tsx  song-charts-print-client.tsx  song-revision-history-card.tsx  song-slide-arrangements-client.tsx  song-slide-arrangements.tsx  upload-asset-form.tsx
components/charts/: chart-import-dialog.tsx  chart-notes-footnotes.ts  chart-notes-layer.tsx  chord-chart-editor.tsx  vocal-chart-preview.tsx
components/ui/: alert-dialog.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  popover.tsx  radio-group.tsx  scroll-area.tsx  single-file-uploader.tsx  slider.tsx  tabs.tsx  toggle-group.tsx
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  normalize.rs  propresenter.rs  types.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: commands.rs  lib.rs  main.rs
crates/desktop/ui/: index.html
crates/ppt/: Cargo.toml
crates/ppt/src/: lib.rs  parser.rs
crates/pptx/: Cargo.toml
crates/pptx/src/: lib.rs  parser.rs
crates/worker-wasm/: Cargo.toml
crates/worker-wasm/src/: lib.rs
hooks/: use-file-upload.ts
lib/: database.types.ts  song-import.ts
lib/actions/: groups.ts  sets.ts  song-arrangements.ts  song-revisions.ts  songs.ts
lib/charts/import/: match.ts  parse.ts  types.ts
lib/exports/: charts.ts  lyrics.ts
lib/extractors/: docx.ts  index.ts  pdf.ts
lib/supabase/: server.ts
lib/utils/: set-song-picker.ts
scripts/: import-text-songs.ts
slides/PowerPoint/: A Mighty Fortress Is Our God.ppt  Alas And Did My Savior Bleed.ppt  Knowing You.ppt  Take My Life And Let It Be.pptx
slides/Text/Hagan/: A Mighty Fortress Is Our God.txt  All Creatures Of Our God And King.txt  All Glory Laud and Honor.txt  All Of My Days.txt  Amazing Grace.txt  And Can It Be.txt  Be Thou My Vision.txt  Before The Throne Of God Above.txt  Come And Rejoice.txt  (+29 more)
test slide files/: Come Thou Fount of Every Blessing.pptx  When I Survey the Wondrous Cross.pptx  You Are My King.pptx
workers/extract-worker/: README.md  package.json  wrangler.toml
(+297 files in other folders)
