[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/pptx",
    "crates/ppt",
    "crates/cli",
    "crates/desktop",
    "crates/worker-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ethan"]
license = "MIT"

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# XML parsing (for PPTX)
quick-xml = { version = "0.31", features = ["serialize"] }

# ZIP handling (for PPTX)
zip = "0.6"

# OLE/CFB handling (for PPT)
cfb = "0.9"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Regex for text processing
regex = "1.10"

# Unicode normalization
unicode-normalization = "0.1"

# Internal crates
ppt-core = { path = "crates/core" }
ppt-pptx = { path = "crates/pptx" }
ppt-ppt = { path = "crates/ppt" }
