[package]
name = "ppt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for extracting text from PowerPoint files"

[[bin]]
name = "ppt-extract"
path = "src/main.rs"

[dependencies]
ppt-core.workspace = true
ppt-pptx.workspace = true
ppt-ppt.workspace = true
clap.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
