[package]
name = "ppt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core domain types, text normalization, and ProPresenter formatting for PowerPoint text extraction"

[dependencies]
thiserror.workspace = true
serde.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
log.workspace = true

[dev-dependencies]
