[package]
name = "ppt-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Desktop GUI for PowerPoint text extraction using Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ppt-core.workspace = true
ppt-pptx.workspace = true
ppt-ppt.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
