[package]
name = "ppt-pptx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PPTX (OOXML) parser backend for PowerPoint text extraction"

[dependencies]
ppt-core.workspace = true
thiserror.workspace = true
quick-xml.workspace = true
zip.workspace = true
log.workspace = true
serde.workspace = true

[dev-dependencies]
