[package]
name = "ppt-worker-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM-compatible wrapper for PPT text extraction, for use in Cloudflare Workers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ppt-core.workspace = true
ppt-pptx = { path = "../pptx" }
ppt-ppt = { path = "../ppt" }
wasm-bindgen = "0.2"
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
